--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/plugins/icheck-bootstrap/icheck-bootstrap.min.css" />
   <!-- Theme style -->
   <link rel="stylesheet" href="%PUBLIC_URL%/dist/css/adminlte.min.css" />
-  <title>React App</title>
+  <title>Proyecto TalentoTech</title>
 </head>
 
 <body>
